# imlab_barcode_detection

./: .gitignore  CMakeLists.txt  LICENSE  README.md  barcode_detector.h  barcode_recognition_benchmark.c  barcode_recognition_single.c
assets/post_resources/barcode_detection/: hough_transform_example.gsheet
data/: .gitignore
resources/: title_image.xcf
